# plovary

./: MANIFEST.in  README.md  plovary.py  setup.cfg
examples/: README.md  plovim.py  symbols.py
examples/ezkana/: ezkana-ime.py  ezkana-ime.sh  ezkana-proper.py  ezkana-proper.sh  ezkana.py
src/plovary/: __init__.py
