[metadata]
name = plovary
version = 0.2.3
description = Plover dictionary generation library
long_description_content_type = text/markdown; charset=UTF-8
long_description = file:README.md
keywords = plover, plover_plugin
url = https://github.com/42triangles/plovary
author = 42triangles
author_email = 42triangles@tutanota.com
license = Unlicense
license_file = LICENSE

[options]
zip_safe = True
setup_requires =
  setuptools>=30.3.0
py_modules =
  plovary
